# Komputeryzacja-Pomiarow

./: .gitignore  data.csv  main.py  project.ino  psu.py  pyproject.toml  sensor.py
termostat/: gui.py  main.ui  mock_arduino.py  mock_psu.py  pid_controller.py  plot.py  psu.py  sensor.py  serial.py  serial_port.py
